# mochiOS

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY_REVIEW.md  arg.md  build.rs  contributing.md  contributors.md  librust_out.rlib  panic.md  qodana.yaml  rust-toolchain.toml  std-todo.md  todo.md
.cargo/: config.toml  config_link.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
builders/: apps.rs  drivers.rs  fs_image.rs  mod.rs  modules.rs  newlib.rs  services.rs
fs/: readme.txt
scripts/: build-user-elf.sh  create_iso.sh  make-uefi-boot.sh  make_image.sh  qemu-runner.sh  test_elf.sh  write_iso.sh
shared/: fs_consts.rs
src/: app.rs  error.rs  libkagami.rs  linker.ld  main.rs  x86_64-mochios.json  x86_64-swiftcore.json
src/apps/Binder/: Cargo.toml  LICENSE.md  Makefile  about.toml  build.rs  x86_64-mochios.json
src/apps/Binder/desgins/: icon.pen  window.pen
src/apps/Binder/src/: host_main.rs  main.rs  mochi_main.rs
src/apps/Binder/src/components/: window.html
src/apps/UiExample/: Cargo.toml  about.toml
src/apps/UiExample/src/: host_main.rs  main.rs  mochi_main.rs
src/apps/ViewKit/: Cargo.toml  Makefile  about.toml  build.rs
src/apps/ViewKit/.cargo/: config.toml
src/apps/ViewKit/designs/: appicon.pen  button.pen  card.pen  dock.pen  logo.pen
src/apps/ViewKit/docs/: state_management.md  template.md
src/apps/ViewKit/docs/component/: about.md  button.md  card.md  how-to-create.md  how-to-use.md  text.md
src/apps/ViewKit/examples/: event_debug.rs  stateful_ui.rs  ui_test.rs
src/apps/ViewKit/resources/components/: button.html  card.html  image.html  text.html
src/apps/ViewKit/src/: app.rs  app_runner.rs  components.rs  lib.rs  state.rs  window.rs
src/apps/ViewKit/src/pipeline/: display_list.rs  dom.rs  framebuffer.rs  image.rs  layout.rs  mod.rs  parser.rs  rasterizer.rs  style.rs
src/apps/shell/: Cargo.toml
src/apps/shell/.cargo/: config.toml
src/apps/shell/src/: main.rs
src/apps/test_app/: Cargo.toml
src/apps/test_app/src/: lib.rs  main.rs
src/apps/tests/: Cargo.toml  README.md  build.rs
src/apps/tests/.cargo/: config.toml
src/apps/tests/src/: main.rs
src/boot/: booting_gif.rs  loader.rs  vga_console.rs
src/core/: Cargo.toml  audit.rs  core_build.rs  cpu.rs  entry.rs  error.rs  kernel.ld  kernel.rs  lib.rs  panic.rs  percpu.rs  result.rs
src/core/.cargo/: config.toml
src/core/elf/: loader.rs
src/core/init/: fs.rs  mod.rs
src/core/interrupt/: idt.rs  mod.rs  pic.rs  spinlock.rs  syscall.rs  timer.rs
src/core/kmod/: disk.rs  fs.rs  mod.rs
src/core/mem/: allocator.rs  frame.rs  gdt.rs  mod.rs  paging.rs  tss.rs  user.rs
src/core/syscall/: console.rs  exec.rs  fs.rs  io.rs  io_port.rs  ipc.rs  keyboard.rs  linux.rs  mmio.rs  mod.rs  mouse.rs  pgroup.rs  pipe.rs  privileged.rs  process.rs  signal.rs  syscall_entry.rs  task.rs  time.rs  tty.rs  types.rs  vga.rs
src/core/task/: context.rs  elf.rs  fd_table.rs  ids.rs  mod.rs  process.rs  scheduler.rs  signal.rs  thread.rs  usermode.rs
src/core/util/: fifo.rs  log.rs  mod.rs  ps2kbd.rs  ps2mouse.rs  vga.rs
src/drivers/net/: Cargo.toml  build.rs  linker.ld
src/drivers/net/.cargo/: config.toml
src/drivers/net/src/: main.rs  main_refactored.rs  virtio.rs
src/drivers/usb/: build.rs
src/drivers/usb/src/: define.rs  hid.rs  main.rs
src/initfs/: hello  hello.asm  test.elf  test.txt  test_app.elf
src/lib/: Cargo.toml  fs.rs  ipc.rs  lib.rs  process.rs
src/libc-rs/: Cargo.toml  cargo.toml
src/libc-rs/src/: lib.rs
src/modules/disk/: Cargo.toml
src/modules/disk/.cargo/: config.toml
src/modules/disk/src/: main.rs
src/modules/fs/.cargo/: config.toml
src/modules/fs/src/: main.rs
src/posix/: Cargo.toml
src/posix/src/: lib.rs
src/resources/config/: env.txt
src/resources/system/: about.txt
src/services/: index.toml
src/services/core/: .gitignore  Cargo.toml  build.rs
src/services/core/.cargo/: config.toml
src/services/core/src/: main.rs
src/services/disk/: Cargo.toml  build.rs  linker.ld
src/services/disk/.cargo/: config.toml
src/services/disk/src/: ata.rs  main.rs
src/services/driver/: build.rs  linker.ld
src/services/driver/src/: main.rs
src/services/fs/: Cargo.toml  build.rs  build.sh
src/services/fs/src/: disk_device.rs  main.rs
src/services/fs/src/common/: mod.rs  vfs.rs
src/services/fs/src/ext2/: mod.rs
src/services/fs/src/initfs/: mod.rs
src/services/keyboard/: Cargo.toml
src/services/keyboard/src/: main.rs
src/services/proc/: Cargo.toml
src/services/shell/: Cargo.toml  build.rs
src/services/shell/.cargo/: config.toml
src/services/shell/src/: char.rs  keyboard.rs  main.rs
src/user/: Cargo.toml  cfunc.rs  crt.rs  fs.rs  fs_consts.rs  gfx.rs  input.rs  io.rs  ipc.rs  keyboard.rs  lib.rs  libc.rs  mmio.rs  mouse.rs  newlib.rs  port.rs  posix_stubs.rs  privileged.rs  process.rs  stub.rs  sys.rs  task.rs  time.rs  vga.rs
src/user/test_app/: Cargo.toml  build.sh  linker.ld  x86_64-swiftcore.json
src/user/test_app/.cargo/: config.toml
src/user/test_app/examples/: advanced.rs
src/user/test_app/src/: lib.rs  main.rs
src/utils/: Cargo.toml  build.rs
src/utils/.cargo/: config.toml
src/utils/src/: cat.rs  echo.rs  ls.rs  pwd.rs
tools/msig/: Cargo.toml
