[package]
name = "SwiftCore"
version = "0.1.0"
edition = "2021"
authors = ["tas0dev"]
default-run = "boot"
build = "build.rs"

[lib]
name = "swiftcore"
path = "src/core/lib.rs"
test = false
bench = false

[[bin]]
name = "boot"
path = "src/boot/loader.rs"
test = false
bench = false

[dependencies]
uefi = { version = "0.30", features = ["alloc", "logger"] }
spin = "0.9"
x86_64 = "0.15"
linked_list_allocator = "0.10.5"
libm = "0.2.16"

[build-dependencies]
num_cpus = "1.17.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
libc = { path = "src/libc-rs" }