[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ls"
path = "src/ls.rs"
test = false
bench = false

[[bin]]
name = "echo"
path = "src/echo.rs"
test = false
bench = false

[[bin]]
name = "cat"
path = "src/cat.rs"
test = false
bench = false

[[bin]]
name = "pwd"
path = "src/pwd.rs"
test = false
bench = false

[dependencies]
swiftlib = { path = "../user", features = ["std-support"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
