[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tests"
path = "src/main.rs"
test = false
bench = false

[dependencies]
swiftlib = { path = "../../user", features = ["std-support"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
